# projet-bdd-cipa4

./: .gitignore  Mcd_V1.mcd  Présentation projet.md  README.MD  cleaned_data.csv  communes-france-2024-limite.csv  data_small.csv  run_results.sh
data-cleanup/: .env.example  pyproject.toml
data-cleanup/src/data_cleanup/: __init__.py  clean_data.py  config.py  detect_encoding.py  generate_inserts.py  map_orientation_pente.py  map_visualization.py  query_11.py  query_12.py  utils.py
sql/model/: database.sql  drop_and_recreate.sql
sql/requests/: SqlRequests.sql  testModel.sql
sql/requests/results/: request_1.sql  request_10.sql  request_11.sql  request_12.sql  request_2.sql  request_3.sql  request_4.sql  request_5.sql  request_6.sql  request_7.sql  request_8.sql  request_9.sql
