[project]
name = "data-cleanup"
version = "0.1.0"
description = ""
authors = [
    {name = "Félix MARQUET",email = "72651575+BreizhHardware@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "data_cleanup", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
